--- a/Linux_test/Order_System/server_code/Makefile
+++ b/Linux_test/Order_System/server_code/Makefile
@@ -1,6 +1,2 @@
-db_test:db_test.cpp db.hpp
-	gcc $^ -o $@  -L /usr/lib64/mysql -lmysqlclient -ljsoncpp -lpthread -g 
-
-.PHONY:clean
-clean:
-	rm db_test
+test:db_test.cpp db.hpp
+	g++ $^ -o $@ -L /usr/lib64/mysql -lmysqlclient -ljsoncpp -lpthread -g
