--- a/Linux_test/Order_System/server_code/Makefile
+++ b/Linux_test/Order_System/server_code/Makefile
@@ -1,2 +1,17 @@
-test:db_test.cpp db.hpp
-	g++ $^ -o $@ -L /usr/lib64/mysql -lmysqlclient -ljsoncpp -lpthread -g
+FLAG=-L/usr/lib64/mysql -lmysqlclient -ljsoncpp -std=c++11 -lpthread
+
+.PHONY:all
+all:server db_test httptest 
+
+server:server.cc  
+	g++ $^ -o  $@ $(FLAG)
+	gcc -v
+db_test:db_test.cpp 
+	g++ $^ -o $@ $(FLAG)
+
+httptest:httptest.cc
+	g++ $^ -o $@ $(FLAG)  
+
+.PHONY:clean
+clean:
+	rm db_test server httptest
